Continued development of expansion procedure functions

--- a/notebooks/MCTS Base Classes.ipynb
+++ b/notebooks/MCTS Base Classes.ipynb
@@ -47,6 +47,7 @@
     "\n",
     "# function for selecting the best child \n",
     "# node with highest number of visits \n",
+    "# this might not be the best approach\n",
     "def best_child(node): \n",
     "\tpick child with highest number of visits \n"
    ]
@@ -62,8 +63,8 @@
     "import math\n",
     "\n",
     "class UCTNode():\n",
-    "  def __init__(self, game_state, move, parent=None):\n",
-    "    self.game_state = game_state\n",
+    "  def __init__(self, state, move, parent=None):\n",
+    "    self.state = state\n",
     "    self.move = move\n",
     "    self.is_expanded = False\n",
     "    self.parent = parent  # Optional[UCTNode]\n",
@@ -112,7 +113,7 @@
     "  def maybe_add_child(self, move):\n",
     "    if move not in self.children:\n",
     "      self.children[move] = UCTNode(\n",
-    "          self.game_state.play(move), move, parent=self)\n",
+    "          self.state.play(move), move, parent=self)\n",
     "    return self.children[move]\n",
     "\n",
     "  def backup(self, value_estimate: float):\n",
@@ -120,21 +121,21 @@
     "    while current.parent is not None:\n",
     "      current.number_visits += 1\n",
     "      current.total_value += (value_estimate *\n",
-    "        self.game_state.to_play)\n",
+    "        self.state.to_play)\n",
     "      current = current.parent\n",
     "\n",
-    "class DummyNode(object):\n",
+    "class DummyNode(object): #first node I think\n",
     "  def __init__(self):\n",
     "    self.parent = None\n",
     "    self.child_total_value = collections.defaultdict(float)\n",
     "    self.child_number_visits = collections.defaultdict(float)\n",
     "\n",
     "\n",
-    "def UCT_search(game_state, num_reads):\n",
-    "  root = UCTNode(game_state, move=None, parent=DummyNode())\n",
+    "def UCT_search(state, num_reads):\n",
+    "  root = UCTNode(state, move=None, parent=DummyNode())\n",
     "  for _ in range(num_reads):\n",
     "    leaf = root.select_leaf()\n",
-    "    child_priors, value_estimate = NeuralNet.evaluate(leaf.game_state)\n",
+    "    child_priors, value_estimate = NeuralNet.evaluate(leaf.state)\n",
     "    leaf.expand(child_priors)\n",
     "    leaf.backup(value_estimate)\n",
     "  return np.argmax(root.child_number_visits)\n",
@@ -142,35 +143,35 @@
     "\n",
     "class NeuralNet():\n",
     "  @classmethod\n",
-    "  def evaluate(self, game_state):\n",
+    "  def evaluate(self, state):\n",
     "    return np.random.random([362]), np.random.random()\n",
     "\n",
-    "class GameState():\n",
+    "class State():\n",
     "  def __init__(self, to_play=1):\n",
     "    self.to_play = to_play\n",
     "\n",
     "  def play(self, move):\n",
-    "    return GameState(-self.to_play)"
+    "    return State(-self.to_play)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Took 1.1623125076293945 sec to run 10000 times\n"
+      "Took 13.210376501083374 sec to run 100000 times\n"
      ]
     }
    ],
    "source": [
-    "num_reads = 10000\n",
+    "num_reads = 100000\n",
     "import time\n",
     "tick = time.time()\n",
-    "UCT_search(GameState(), num_reads)\n",
+    "UCT_search(State(), num_reads)\n",
     "tock = time.time()\n",
     "print(\"Took %s sec to run %s times\" % (tock - tick, num_reads))\n",
     "#import resource\n",
