Fixed indexing errror

--- a/notebooks/MCTS Scratchpad.ipynb
+++ b/notebooks/MCTS Scratchpad.ipynb
@@ -76,8 +76,7 @@
     "        n (int): Number of precursors to return, Segler et al. used 2 I think\n",
     "        \n",
     "    Returns:\n",
-    "        ranked_precursors (list): A ranked list (length n) of tuples (product, reactant, enzyme, probability) \n",
-    "        which are the molecular precursors of allowed transformations for the input mol.\n",
+    "        ranked_precursors (list): A ranked list of length n of predicted precursor structures\n",
     "\n",
     "    Todo:\n",
     "        Tests, complete underlying pipeline functions\n",
@@ -188,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +196,7 @@
     "    \"\"\"\n",
     "\n",
     "    This function filters a list of reactions that are computed chemical transformations.\n",
-    "    It removes the least feasible reactions until there remains only a list of length n. \n",
+    "    It removes the least feasible reactions and returns a list of length n. \n",
     "\n",
     "    Example: \n",
     "        $ python __currently_nonexistent__.py or ``defunct example``\n",
@@ -224,7 +223,8 @@
     "\n",
     "    calculated_feasibilities =  sorted(calculated_feasibilities,key=lambda t: t[1], reverse=True)\n",
     "    \n",
-    "    ranked_precursors = calculated_feasiblities[0:n] #slice the n best out of the list for return\n",
+    "    ranked_precursors = calculated_feasiblities[0:n][0][0][1] #slice the n best precursors out \n",
+    "    #of the list for return. #check index error\n",
     "    \n",
     "    return ranked_precursors # another function needs to build children from ranked result list?"
    ]
@@ -238,22 +238,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(('b', 'c', 'f'), 0.7), (('d', 'b', 'a'), 0.3), (('c', 'd', 'g'), 0.1)]"
+       "'c'"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "k_reactions = [('d','b','a'),('c','d','g'),('b','c','f')]\n",
+    "k_reactions = [('d','b','a'),('c','d','g'),('b','c','f')] #(product, reactant, enzyme)\n",
     "\n",
     "feasibilities = [0.3,0.1,0.7]\n",
     "\n",
@@ -261,7 +261,7 @@
     "\n",
     "calculated_feasibilities =  sorted(calculated_feasibilities,key=lambda t: t[1], reverse=True)\n",
     "\n",
-    "calculated_feasibilities"
+    "calculated_feasibilities[:][0][0][1]"
    ]
   },
   {
@@ -288,7 +288,7 @@
     "        reaction_probability (float): A value between 0 and 1 of the predicted probability of a given reaction\n",
     "        \n",
     "    Todo:\n",
-    "        Figure out if the product and reactant need to point to node ids? I want to die\n",
+    "        Determine ML method to be used and update function accordingly \n",
     "\n",
     "    \"\"\"\n",
     "\n",
