--- a/notebooks/MCTS Base Classes.ipynb
+++ b/notebooks/MCTS Base Classes.ipynb
@@ -8,14 +8,16 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# main function for the Monte Carlo Tree Search from https://www.geeksforgeeks.org/ml-monte-carlo-tree-search-mcts/\n",
-    "def monte_carlo_tree_search(root): \n",
+    "def monte_carlo_tree_search(root): #root is an initialized dummy node, in our case, a smiles string of a hypothetical product\n",
     "\t\n",
     "\twhile resources_left(time, computational power): \n",
-    "\t\tleaf = traverse(root) \n",
+    "\t\tleaf = traverse(root) #if node.visits = 0, rollout, else node.expand()\n",
     "\t\tsimulation_result = rollout(leaf) \n",
     "\t\tbackpropagate(leaf, simulation_result) \n",
     "\t\t\n",
@@ -35,7 +37,7 @@
     "\t\tnode = rollout_policy(node) \n",
     "\treturn result(node) \n",
     "\n",
-    "# function for randomly selecting a child node \n",
+    "# function for randomly selecting a child node (the heart of MCTS)\n",
     "def rollout_policy(node): \n",
     "\treturn pick_random(node.children) \n",
     "\n",
@@ -47,14 +49,13 @@
     "\n",
     "# function for selecting the best child \n",
     "# node with highest number of visits \n",
-    "# this might not be the best approach\n",
     "def best_child(node): \n",
-    "\tpick child with highest number of visits \n"
+    "\treturn max_visits(child)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,113 +63,129 @@
     "import numpy as np\n",
     "import math\n",
     "\n",
-    "class UCTNode():\n",
-    "  def __init__(self, state, move, parent=None):\n",
-    "    self.state = state\n",
-    "    self.move = move\n",
-    "    self.is_expanded = False\n",
-    "    self.parent = parent  # Optional[UCTNode]\n",
-    "    self.children = {}  # Dict[move, UCTNode]\n",
-    "    self.child_priors = np.zeros([362], dtype=np.float32)\n",
-    "    self.child_total_value = np.zeros([362], dtype=np.float32)\n",
-    "    self.child_number_visits = np.zeros([362], dtype=np.float32)\n",
+    "class UCTNode(): # node object\n",
+    "    def __init__(self, state, move, parent=None):\n",
+    "        self.state = state # in our case a structure\n",
+    "        self.move = move\n",
+    "        self.is_expanded = False # starts with no children\n",
+    "        self.parent = parent  # Optional[UCTNode]\n",
+    "        self.children = {} # Dict[move, UCTNode] #pre intia\n",
+    "        self.child_priors = np.zeros([362], dtype=np.float32)\n",
+    "        self.child_total_value = np.zeros([362], dtype=np.float32)\n",
+    "        self.child_number_visits = np.zeros([362], dtype=np.float32)\n",
     "\n",
-    "  @property\n",
-    "  def number_visits(self):\n",
-    "    return self.parent.child_number_visits[self.move]\n",
+    "    @property # number_visits getter\n",
+    "    def number_visits(self):\n",
+    "        return self.parent.child_number_visits[self.move]\n",
     "\n",
-    "  @number_visits.setter\n",
-    "  def number_visits(self, value):\n",
-    "    self.parent.child_number_visits[self.move] = value\n",
+    "    @number_visits.setter # setter\n",
+    "    def number_visits(self, value):\n",
+    "        self.parent.child_number_visits[self.move] = value\n",
     "\n",
-    "  @property\n",
-    "  def total_value(self):\n",
-    "    return self.parent.child_total_value[self.move]\n",
+    "    @property # total_value getter\n",
+    "    def total_value(self):\n",
+    "        return self.parent.child_total_value[self.move]\n",
     "\n",
-    "  @total_value.setter\n",
-    "  def total_value(self, value):\n",
-    "    self.parent.child_total_value[self.move] = value\n",
+    "    @total_value.setter # setter\n",
+    "    def total_value(self, value):\n",
+    "        self.parent.child_total_value[self.move] = value\n",
     "\n",
-    "  def child_Q(self):\n",
-    "    return self.child_total_value / (1 + self.child_number_visits)\n",
+    "    def child_Q(self):\n",
+    "        return self.child_total_value / (1 + self.child_number_visits) # essentially number successes/number of visits\n",
     "\n",
-    "  def child_U(self):\n",
-    "    return math.sqrt(self.number_visits) * (\n",
-    "        self.child_priors / (1 + self.child_number_visits))\n",
+    "    def child_U(self):\n",
+    "        return math.sqrt(self.number_visits) * (\n",
+    "            self.child_priors / (1 + self.child_number_visits)) # decreases as the number of visits increases? what is priors\n",
     "\n",
-    "  def best_child(self):\n",
-    "    return np.argmax(self.child_Q() + self.child_U())\n",
+    "    def best_child(self):\n",
+    "        return np.argmax(self.child_Q() + self.child_U()) # of the children find the child with the highest aggregate of quality and uncertainty\n",
     "\n",
-    "  def select_leaf(self):\n",
-    "    current = self\n",
+    "    def select_leaf(self): # need to immediately rollout if not is_expanded\n",
+    "        current = self\n",
     "    while current.is_expanded:\n",
-    "      best_move = current.best_child()\n",
-    "      current = current.maybe_add_child(best_move)\n",
-    "    return current\n",
+    "        best_move = current.best_child()\n",
+    "        current = current.maybe_add_child(best_move)\n",
+    "        return current\n",
     "\n",
-    "  def expand(self, child_priors):\n",
-    "    self.is_expanded = True\n",
-    "    self.child_priors = child_priors\n",
+    "    def expand(self, child_priors):\n",
+    "        self.is_expanded = True\n",
+    "        self.child_priors = child_priors\n",
     "\n",
-    "  def maybe_add_child(self, move):\n",
-    "    if move not in self.children:\n",
-    "      self.children[move] = UCTNode(\n",
-    "          self.state.play(move), move, parent=self)\n",
-    "    return self.children[move]\n",
+    "    def maybe_add_child(self, move):\n",
+    "        if move not in self.children:\n",
+    "            self.children[move] = UCTNode(\n",
+    "              self.state.play(move), move, parent=self)\n",
+    "        return self.children[move]\n",
     "\n",
-    "  def backup(self, value_estimate: float):\n",
-    "    current = self\n",
+    "    def backpropagate(self, value_estimate: float): #after rollout, calculate value of node\n",
+    "        current = self\n",
     "    while current.parent is not None:\n",
-    "      current.number_visits += 1\n",
-    "      current.total_value += (value_estimate *\n",
-    "        self.state.to_play)\n",
-    "      current = current.parent\n",
+    "        current.number_visits += 1\n",
+    "        current.total_value += (value_estimate *\n",
+    "            self.state.to_play)\n",
+    "        current = current.parent\n",
     "\n",
-    "class DummyNode(object): #first node I think\n",
-    "  def __init__(self):\n",
-    "    self.parent = None\n",
-    "    self.child_total_value = collections.defaultdict(float)\n",
-    "    self.child_number_visits = collections.defaultdict(float)\n",
-    "\n",
-    "\n",
-    "def UCT_search(state, num_reads):\n",
-    "  root = UCTNode(state, move=None, parent=DummyNode())\n",
-    "  for _ in range(num_reads):\n",
-    "    leaf = root.select_leaf()\n",
-    "    child_priors, value_estimate = NeuralNet.evaluate(leaf.state)\n",
-    "    leaf.expand(child_priors)\n",
-    "    leaf.backup(value_estimate)\n",
-    "  return np.argmax(root.child_number_visits)\n",
+    "class DummyNode(object): #first node I think (root node?) or otherwise parentless node\n",
+    "    def __init__(self):\n",
+    "        self.parent = None\n",
+    "        self.child_total_value = collections.defaultdict(float)\n",
+    "        self.child_number_visits = collections.defaultdict(float)\n",
     "\n",
     "\n",
-    "class NeuralNet():\n",
-    "  @classmethod\n",
-    "  def evaluate(self, state):\n",
-    "    return np.random.random([362]), np.random.random()\n",
+    "def UCT_search(state, num_reads): # refer to Segler et al. 2018 Figure \n",
+    "    root = UCTNode(state, move=None, parent=DummyNode()) \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    for _ in range(num_reads): # iterator isn't neccessary in this iteration, just need to iterate the right number of times\n",
+    "        leaf = root.select_leaf() # ***STEP 1***\n",
+    "\n",
+    "        if leaf == root: #if visiting for the first time skip step 2\n",
+    "            #count +=1\n",
+    "            value_estimate = RolloutPhase.evaluate(leaf)\n",
+    "            leaf.backpropagate(value_estimate)\n",
+    "            return np.argmax(root.child_number_visits)\n",
+    "\n",
+    "        child_priors = ExpansionPhase.evaluate(leaf.state) # NEED to figure out what child_priors\n",
+    "        leaf.expand(child_priors) # expand by the predicted child_priors\n",
+    "        value_estimate = RolloutPhase.evaluate(leaf.child_priors) # ***STEP 3*** estimate the value of the best of child_priors ?\n",
+    "        leaf.backpropagate(value_estimate) # ***STEP 4***\n",
+    "    return np.argmax(root.child_number_visits)\n",
+    "\n",
+    "\n",
+    "class ExpansionPhase():\n",
+    "    @classmethod\n",
+    "    def evaluate(self, state): # state of leaf (child) node\n",
+    "        return np.random.random([362])#, np.random.random()\n",
+    "\n",
+    "class RolloutPhase():\n",
+    "    @classmethod\n",
+    "    def evaluate(self, child_priors):\n",
+    "        return np.random.random()\n",
     "\n",
     "class State():\n",
-    "  def __init__(self, to_play=1):\n",
-    "    self.to_play = to_play\n",
+    "    def __init__(self, to_play=1):\n",
+    "        self.to_play = to_play\n",
     "\n",
-    "  def play(self, move):\n",
-    "    return State(-self.to_play)"
+    "    def play(self, move):\n",
+    "        return State(-self.to_play)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Took 13.210376501083374 sec to run 100000 times\n"
+      "Took 0.0019655227661132812 sec to run 10000 times\n"
      ]
     }
    ],
    "source": [
-    "num_reads = 100000\n",
+    "num_reads = 10000\n",
     "import time\n",
     "tick = time.time()\n",
     "UCT_search(State(), num_reads)\n",
@@ -177,6 +194,13 @@
     "#import resource\n",
     "#print(\"Consumed %sB memory\" % resource.getrusage(resource.RUSAGE_SELF).ru_maxrss)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
