remove cofactors, starting on code to get pubchem ids

--- a/deprecated/notebooks/Metacyc_datacleaning-Copy1.ipynb
+++ b/deprecated/notebooks/Metacyc_datacleaning-Copy1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -852,18 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_cofactor_list(cofactor_df,CPDcolumn):\n",
-    "    cofactor_list = [cofactor[4:10] for cofactor in cofactor_df[CPDcolumn]]\n",
-    "    return cofactor_list "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -887,154 +876,206 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>CPD</th>\n",
-       "      <th>description</th>\n",
+       "      <th>UNIQUE_ID</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>cpd:C00001</td>\n",
-       "      <td>H2O; Water</td>\n",
+       "      <td>WATER</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>cpd:C00002</td>\n",
-       "      <td>ATP; Adenosine 5'-triphosphate</td>\n",
+       "      <td>ATP</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>cpd:C00003</td>\n",
-       "      <td>NAD+; NAD; Nicotinamide adenine dinucleotide; ...</td>\n",
+       "      <td>NAD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>cpd:C00004</td>\n",
-       "      <td>NADH; DPNH; Reduced nicotinamide adenine dinuc...</td>\n",
+       "      <td>NADH</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>cpd:C00005</td>\n",
-       "      <td>NADPH; TPNH; Reduced nicotinamide adenine dinu...</td>\n",
+       "      <td>NADPH</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>6</td>\n",
-       "      <td>cpd:C00006</td>\n",
-       "      <td>NADP+; NADP; Nicotinamide adenine dinucleotide...</td>\n",
+       "      <td>NADP</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>7</td>\n",
-       "      <td>cpd:C00007</td>\n",
-       "      <td>Oxygen; O2</td>\n",
+       "      <td>OXYGEN-MOLECULE</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>8</td>\n",
-       "      <td>cpd:C00008</td>\n",
-       "      <td>ADP; Adenosine 5'-diphosphate</td>\n",
+       "      <td>ADP</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>9</td>\n",
-       "      <td>cpd:C00009</td>\n",
-       "      <td>Orthophosphate; Phosphate; Phosphoric acid; Or...</td>\n",
+       "      <td>PROTON</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>10</td>\n",
-       "      <td>cpd:C00010</td>\n",
-       "      <td>CoA; Coenzyme A; CoA-SH</td>\n",
+       "      <td>CARBON-MONOXIDE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>CARBON-DIOXIDE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>CO2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Carbon dioxide</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>FMN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>FAD</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0         CPD                                        description\n",
-       "0           1  cpd:C00001                                         H2O; Water\n",
-       "1           2  cpd:C00002                     ATP; Adenosine 5'-triphosphate\n",
-       "2           3  cpd:C00003  NAD+; NAD; Nicotinamide adenine dinucleotide; ...\n",
-       "3           4  cpd:C00004  NADH; DPNH; Reduced nicotinamide adenine dinuc...\n",
-       "4           5  cpd:C00005  NADPH; TPNH; Reduced nicotinamide adenine dinu...\n",
-       "5           6  cpd:C00006  NADP+; NADP; Nicotinamide adenine dinucleotide...\n",
-       "6           7  cpd:C00007                                         Oxygen; O2\n",
-       "7           8  cpd:C00008                      ADP; Adenosine 5'-diphosphate\n",
-       "8           9  cpd:C00009  Orthophosphate; Phosphate; Phosphoric acid; Or...\n",
-       "9          10  cpd:C00010                            CoA; Coenzyme A; CoA-SH"
+       "        \\tUNIQUE_ID\n",
+       "0             WATER\n",
+       "1               ATP\n",
+       "2               NAD\n",
+       "3              NADH\n",
+       "4             NADPH\n",
+       "5              NADP\n",
+       "6   OXYGEN-MOLECULE\n",
+       "7               ADP\n",
+       "8            PROTON\n",
+       "9   CARBON-MONOXIDE\n",
+       "10   CARBON-DIOXIDE\n",
+       "11              CO2\n",
+       "12   Carbon dioxide\n",
+       "13              FMN\n",
+       "14              FAD"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cofactor_df=pd.read_csv(\"../datasets/cofactor_list.csv\")\n",
-    "cofactor_df.head(10)"
+    "cofactor_df=pd.read_csv(\"../../datasets/cofactor_list_meta.csv\")\n",
+    "cofactor_df.head(15)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "def get_cofactor_list(cofactor_df):\n",
+    "    cofactor_list = cofactor_df['UNIQUE_ID'].values.tolist()\n",
+    "    return cofactor_list "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['C00001',\n",
-       " 'C00002',\n",
-       " 'C00003',\n",
-       " 'C00004',\n",
-       " 'C00005',\n",
-       " 'C00006',\n",
-       " 'C00007',\n",
-       " 'C00008',\n",
-       " 'C00009',\n",
-       " 'C00010',\n",
-       " 'C00011',\n",
-       " 'C00012',\n",
-       " 'C00013',\n",
-       " 'C00014',\n",
-       " 'C00015',\n",
-       " 'C00016',\n",
-       " 'C00017',\n",
-       " 'C00018',\n",
-       " 'C00019',\n",
-       " 'C00020',\n",
-       " 'C00021',\n",
-       " 'C00023',\n",
-       " 'C00027',\n",
-       " 'C00028',\n",
-       " 'C00030',\n",
-       " 'C00032',\n",
-       " 'C00034',\n",
-       " 'C00050',\n",
-       " 'C00061',\n",
-       " 'C00070',\n",
-       " 'C00080',\n",
-       " 'C00255',\n",
-       " 'C01007',\n",
-       " 'C01352',\n",
-       " 'C01382',\n",
-       " 'C02745',\n",
-       " 'C02869']"
+       "[['WATER'],\n",
+       " ['ATP'],\n",
+       " ['NAD'],\n",
+       " ['NADH'],\n",
+       " ['NADPH'],\n",
+       " ['NADP'],\n",
+       " ['OXYGEN-MOLECULE'],\n",
+       " ['ADP'],\n",
+       " ['PROTON'],\n",
+       " ['CARBON-MONOXIDE'],\n",
+       " ['CARBON-DIOXIDE'],\n",
+       " ['CO2'],\n",
+       " ['Carbon dioxide'],\n",
+       " ['FMN'],\n",
+       " ['FAD'],\n",
+       " ['FMNH'],\n",
+       " ['FADH'],\n",
+       " ['FMNH2'],\n",
+       " ['FADH2'],\n",
+       " ['PYRIDOXAL_PHOSPHATE'],\n",
+       " ['RIBOFLAVIN'],\n",
+       " ['AMP']]"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cofactor_list = get_cofactor_list(cofactor_df,\"CPD\")\n",
+    "cofactor_list = cofactor_df.values.tolist()\n",
+    "cofactor_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "flat_list = []\n",
+    "for sublist in cofactor_list:\n",
+    "    for item in sublist:\n",
+    "        flat_list.append(item)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['WATER',\n",
+       " 'ATP',\n",
+       " 'NAD',\n",
+       " 'NADH',\n",
+       " 'NADPH',\n",
+       " 'NADP',\n",
+       " 'OXYGEN-MOLECULE',\n",
+       " 'ADP',\n",
+       " 'PROTON',\n",
+       " 'CARBON-MONOXIDE',\n",
+       " 'CARBON-DIOXIDE',\n",
+       " 'CO2',\n",
+       " 'Carbon dioxide',\n",
+       " 'FMN',\n",
+       " 'FAD',\n",
+       " 'FMNH',\n",
+       " 'FADH',\n",
+       " 'FMNH2',\n",
+       " 'FADH2',\n",
+       " 'PYRIDOXAL_PHOSPHATE',\n",
+       " 'RIBOFLAVIN',\n",
+       " 'AMP']"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cofactor_list = flat_list\n",
     "cofactor_list"
    ]
   },
@@ -1056,23 +1097,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def rm_cofactor_only_cpd(df,compound_columnname,cofactor_list):\n",
-    "    newdf = df.drop([\"product\"],axis=1)\n",
-    "    cleaned_compound_column = []\n",
+    "def rm_cofactor_only_cpd(df,prod_columnname,sub_columnname,cofactor_list):\n",
+    "    cleaned_product_column = []\n",
+    "    cleaned_substrate_column = []\n",
     "    for index,row in df.iterrows():\n",
-    "        cpd_compound_list =[]\n",
-    "        for compound in row[compound_columnname]:\n",
-    "            if \"CPD\" in compound:\n",
-    "                onlycpd = get_cpd(compound)\n",
-    "                if onlycpd not in cofactor_list:\n",
-    "                    cpd_compound_list.append(onlycpd)\n",
-    "                else:\n",
-    "                    pass\n",
-    "        if len(cpd_compound_list)==0:\n",
-    "            cleaned_compound_column.append(\"NA\")\n",
+    "        prod_compound_list =[]\n",
+    "        sub_compound_list = []\n",
+    "        for compound in row[prod_columnname]:\n",
+    "            if compound not in cofactor_list:\n",
+    "                prod_compound_list.append(compound)\n",
+    "            else:\n",
+    "                pass\n",
+    "        for compound in row[sub_columnname]:\n",
+    "            if compound not in cofactor_list:\n",
+    "                sub_compound_list.append(compound)\n",
+    "            else:\n",
+    "                pass\n",
+    "        if len(prod_compound_list)==0:\n",
+    "            cleaned_product_column.append('NA')\n",
     "        else: \n",
-    "            cleaned_compound_column.append(cpd_compound_list)\n",
-    "    newdf['product'] = cleaned_compound_column\n",
+    "            cleaned_product_column.append(prod_compound_list)\n",
+    "        if len(sub_compound_list)==0:\n",
+    "            cleaned_substrate_column.append('NA')\n",
+    "        else: \n",
+    "            cleaned_substrate_column.append(sub_compound_list)\n",
+    "    newdf = df.drop(['PRODUCTS', 'SUBSTRATES'], axis=1)\n",
+    "    newdf['PRODUCTS'] = cleaned_product_column\n",
+    "    newdf['SUBSTRATES'] = cleaned_substrate_column\n",
     "    return newdf"
    ]
   },
