--- a/notebooks/MCTS Base Classes.ipynb
+++ b/notebooks/MCTS Base Classes.ipynb
@@ -55,9 +55,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "'return' outside function (<ipython-input-2-0059d4545fc4>, line 50)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-2-0059d4545fc4>\"\u001b[1;36m, line \u001b[1;32m50\u001b[0m\n\u001b[1;33m    self.is_expanded = True\u001b[0m\n\u001b[1;37m           ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m 'return' outside function\n"
+     ]
+    }
+   ],
    "source": [
     "import collections\n",
     "import numpy as np\n",
