compressed master dataframe

--- a/deprecated/notebooks/MetaCyc_tuning_master.ipynb
+++ b/deprecated/notebooks/MetaCyc_tuning_master.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,8 @@
     "import scipy as sp\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "import gzip"
    ]
   },
   {
@@ -2039,11 +2040,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "master_df.to_csv('../../../big-datasets/master_dataframe_metacyc.csv', index=None)"
+    "master_df = pd.read_csv('../../../big-datasets/master_dataframe_metacyc.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "master_df.to_csv('../../../big-datasets/master_dataframe_metacyc.csv.gz', index=None, compression='gzip')"
    ]
   },
   {
