working on grid search with new master dataframe

--- a/deprecated/notebooks/MetaCyc_tuning_master.ipynb
+++ b/deprecated/notebooks/MetaCyc_tuning_master.ipynb
@@ -51,12 +51,13 @@
     "promiscuous enzymes df with all promiscuous reactions (pos and neg)\n",
     "should we combine the kegg data and the metacyc data and see if that gives us more reactions? (future problem!)\n",
     "\n",
-    "1) filter and select all promiscuous pos and neg reactions into one dataframe\n",
-    "2) binarize that dataframe\n",
+    "1) filter and select all promiscuous pos and neg reactions into one dataframe (CHECK)\n",
+    "2) binarize that dataframe (CHECK)\n",
     "3) write code to check whether a transformation exists\n",
     "4) take binarized info and test out different models on it\n",
     "make model with promiscuous enzymes\n",
-    "write code to check whether a transformation exists first, then puts the molecule through the model if necessary"
+    "write code to check whether a transformation exists first, then puts the molecule through the model if necessary\n",
+    "check model_query_metacyc ntoebook for example of how to query this thing"
    ]
   },
   {
